# frdx

./: .gitignore  LICENSE  Makefile  README.md  output.py  paths.txt  pyproject.toml  run.sh
.github/workflows/: ci.yml
src/frd/: cli.py  output.py
src/frd/cli/: web.py
src/frd/diag/: __init__.py  tcp_ping.py
src/frd/dns/: __init__.py  resolve.py
src/frd/netcalc/: __init__.py  ipv4.py  ipv6.py
src/frd/scan/: __init__.py  tcp.py
src/frd/utils/: __init__.py  ports.py  validators.py
src/frd/web/: __init__.py  check.py  cli.py  client.py  models.py
tests/: test_dns.py  test_ipv4.py  test_ipv6.py  test_ports.py
tests/web/: test_web_check_integration_local.py  test_web_check_unit.py
