[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferramenta-de-redes"
version = "0.1.0"
description = "Toolkit profissional de redes e segurança (CLI)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rodrigo" }]
dependencies = [
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  "dnspython>=2.6.0",
]

[project.scripts]
frd = "frd.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
